# lektor-make

./: .travis.yml  LICENSE  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst  install.rst
lektor_make/: __init__.py
