[metadata]
name = lektor-make
description = Lektor plugin to run `make lektor` for custom build systems.
long_description = file: README.rst
keywords = hacktoberfest lektor
author = Barnaby Shearer
author_email = b@zi.is
repository = "https://github.com/BarnabyShearer/lektor-make"
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
python_requires = >=3.7
include_package_data = True

[options.package_data]
* = py.typed

